[package]
name = "tokio-muxt"
description = "Timer for a limited set of events that multiplexes over a single tokio Sleep instance."
version = "0.7.0"
edition = "2024"
license = "MIT"
keywords = ["tokio", "timer", "sleep", "multiplex", "deadline"]
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/s2-streamstore/tokio-muxt"
homepage = "https://github.com/s2-streamstore/tokio-muxt"

[dependencies]
pin-project = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
